--- a/WebForm/Web.config
+++ b/WebForm/Web.config
@@ -4,7 +4,17 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="ConnectionString" connectionString=" Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=WebTest;Integrated Security=True;" providerName="System.Data.SqlClient" />
+
+	</connectionStrings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
+	  </authentication>
+	  <authorization>
+		  <allow users="*" />
+	  </authorization>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <pages>
